--- a/index.html
+++ b/index.html
@@ -611,16 +611,21 @@
                                 <h1 class="university">
                                     <ul>
                                     <li><span  id = "gpa", class="year">
-                                        GPA: <span class="year"> *insert* </span>
+                                        GPA: <span class="year"> 3.2 </span>
                                         <span id = "new2" style="padding-left: 484px;" font-style: italic style="line-height:85%"> (2022-2025)</span>
                                         </span></li>
+                                        <h1> <span id = "description", class="year" >
+                                            <li> Mentioned on the Dean's list for two consecutive years. </li>
+                                            <li>Senator at Las Positas College Student Government. </li>
+                                            <li>President/Founder of Girls Who Code Club. </li>  
                                         <li><span  id = "description", class="year" style = "font-weight: bold" > Relevant Coursework: </span> 
                                         <span  id = "description", class="year"> Structure and Interpretation of
-                                            Computer Programs (CS61A) </span> </li>
+                                            Computer Programs (CS61A), Data Structures and Algorithms (CS61B), Discrete Mathematics and Algorithms (CS70),
+                                        Foundations of Data Science (D8) </span> </li>
                                         </ul>
                                 </h1>
                             </div>
-                            <div class="item">
+                            <!-- <div class="item">
                                 <span id = "spanUni">                                
                                     <h3 class="title"><svg class="svg-inline--fa fa-graduation-cap fa-w-20"
                                         aria-hidden="true" focusable="false" data-prefix="fas"
@@ -629,8 +634,8 @@
                                         <path fill="currentColor"
                                             d="M622.34 153.2L343.4 67.5c-15.2-4.67-31.6-4.67-46.79 0L17.66 153.2c-23.54 7.23-23.54 38.36 0 45.59l48.63 14.94c-10.67 13.19-17.23 29.28-17.88 46.9C38.78 266.15 32 276.11 32 288c0 10.78 5.68 19.85 13.86 25.65L20.33 428.53C18.11 438.52 25.71 448 35.94 448h56.11c10.24 0 17.84-9.48 15.62-19.47L82.14 313.65C90.32 307.85 96 298.78 96 288c0-11.57-6.47-21.25-15.66-26.87.76-15.02 8.44-28.3 20.69-36.72L296.6 284.5c9.06 2.78 26.44 6.25 46.79 0l278.95-85.7c23.55-7.24 23.55-38.36 0-45.6zM352.79 315.09c-28.53 8.76-52.84 3.92-65.59 0l-145.02-44.55L128 384c0 35.35 85.96 64 192 64s192-28.65 192-64l-14.18-113.47-145.03 44.56z">
                                         </path>
-                                    </svg><!-- <i class="fas fa-graduation-cap"></i> Font Awesome fontawesome.com -->
-                                    Associate's in Computer Science</h3>
+                                    </svg><i class="fas fa-graduation-cap"></i> Font Awesome fontawesome.com -->
+                                    <!-- Associate's in Computer Science</h3>
                                     <span id = "changecolor">
                                         <h4 style="text-align:right ;" class="university">Las Positas College 
                                         </h4> </span>
@@ -642,15 +647,12 @@
                                      <p style="margin-bottom: 0px; color: green; font-size: 13px; font-weight: bold;" style="padding-left: 484px;" font-style: italic color>(2020-2022) </p></span>
                                      </li>
 
-                                <h1> <span id = "description", class="year" >
-                                    <li> Mentioned on the Dean's list for two consecutive years. </li>
-                                    <li>Senator at Las Positas College Student Government. </li>
-                                    <li>President/Founder of Girls Who Code Club. </li> 
+                                
                                     <li><span  style = "font-weight: bold">Relevant Coursework: </span>  Discrete Mathematics, Data Structures and
                                         Algorithms, Computer Organization and Assembly Language Programming. </li>
                                     </ul>
-                                </span>
-                                </h1>
+                                </span> -->
+                                <!-- </h1> --> 
                             </div>
                         </div>
                     </div>
