--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
                     </div>
                     <!--//section-inner-->
                 </aside>
-                <aside class="education aside section">
+                <!-- <aside class="education aside section">
                     <div id = "box8" class="section-inner shadow-sm rounded">
                         <h2 class="heading">Awards &amp; Certifications</h2>
                         <div class="content">
@@ -837,32 +837,32 @@
                                             d="M448 360V24c0-13.3-10.7-24-24-24H96C43 0 0 43 0 96v320c0 53 43 96 96 96h328c13.3 0 24-10.7 24-24v-16c0-7.5-3.5-14.3-8.9-18.7-4.2-15.4-4.2-59.3 0-74.7 5.4-4.3 8.9-11.1 8.9-18.6zM128 134c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm0 64c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm253.4 250H96c-17.7 0-32-14.3-32-32 0-17.6 14.4-32 32-32h285.4c-1.9 17.1-1.9 46.9 0 64z">
                                         </path>
                                     </svg>
-                                    <!-- <i class="fas fa-book"></i> Font Awesome fontawesome.com -->Presidents List
-                                </h3>
-                                <span class="year1" > <h4 id = "college" class="university" style=" font-weight:500;" >UC Berkeley<br> 
+                                      <i class="fas fa-book"></i> Font Awesome fontawesome.com  Presidents List
+                                 </h3>
+                                <span class="year1" > <h4 id = "college" class="university" style=" font-weight:500;" >Las Positas College<br> 
                                    (Fall 2020 - Spring 2022)</span>
                                 </h4>
                             </div>
-                            <!--//item-->
-                            <div class="item">
+                            <//item-->
+                            <!-- <div class="item">
                                 <h3 class="title"><svg class="svg-inline--fa fa-book fa-w-14" aria-hidden="true"
                                         focusable="false" data-prefix="fas" data-icon="book" role="img"
                                         xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" data-fa-i2svg="">
                                         <path fill="currentColor"
                                             d="M448 360V24c0-13.3-10.7-24-24-24H96C43 0 0 43 0 96v320c0 53 43 96 96 96h328c13.3 0 24-10.7 24-24v-16c0-7.5-3.5-14.3-8.9-18.7-4.2-15.4-4.2-59.3 0-74.7 5.4-4.3 8.9-11.1 8.9-18.6zM128 134c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm0 64c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm253.4 250H96c-17.7 0-32-14.3-32-32 0-17.6 14.4-32 32-32h285.4c-1.9 17.1-1.9 46.9 0 64z">
                                         </path>
-                                    </svg><!-- <i class="fas fa-book"></i> Font Awesome fontawesome.com --> Dean's
+                                    </svg> <i class="fas fa-book"></i> Font Awesome fontawesome.com Dean's
                                     List</h3>
-                                    <h4 id = "college" class="university" style=" font-weight:500;" >UC Berkeley <br> 
+                                    <h4 id = "college" class="university" style=" font-weight:500;" >Las Positas College <br> 
                                         <span class="year" >(Fall 2020 - Spring 2022)</span>
-                                    </h4>
+                                    </h4> -->
                                
-                            </div>
+                            <!-- </div>
                             <!--//item-->
-                            <!--//secton-inner-->
+                            <!--//secton-inner
                         </div>
                     </div>
-                </aside>
+                </aside> --> 
 
                 <!-- <div class = "secondary col-lg-4 col-12"> -->
                 <aside class="skills aside section">
