--- a/index.html
+++ b/index.html
@@ -725,22 +725,45 @@
                     <div id = "box4" class="section-inner shadow-sm rounded">
                         <h2 class="heading">Latest Projects</h2>
                         <div class="content">
-                            <h3 class="title mb-3" style="display:flex;justify-content: space-between;"><a
-                                    href="https://github.com/Berkeley-CS61B-Student/sp23-proj3-g1298/tree/main"> Pacman-designed Game </a>
+                            <h3 class="title mb-3" style="display:flex;justify-content: space-between;">
+                                <a
+                                href="https://github.com/rayyanahmed021/movie_recommend">   SceneScout </a>
                                 <span><i id="1" class="arrow up"></i></span>
                             </h3>
 
                             <div class="desc text-start">
-                                <p>Led the development of a dynamic Pacman-inspired world exploration engine, combining pseudo-random world
-                                    generation with projected path display.
-                                    It has a feature to customize avatar appearance for immersive and visually distinct virtual environments.</p>
-                                    <img src="https://sp23.datastructur.es/materials/proj/proj3/img/enemy.gif" alt="Pacman Game Screenshot" 
-                                    class="project-image"/>
+                                <p>I created a content-based movie recommender system utilizing TMDB API of 5000 movies to suggest personalized
+                                    movie selections. I leveraged Sklearn and NLP libraries for data vectorization, React for frontend interactivity, and Flask for seamless
+                                    backend integration</p>
+                                    <img src = "./image.jpeg" alt = "movie recommend" class="project-image" > 
+                                    <!-- class="project-image">  -->
+
+
+                                    <!-- <img src="https://sp23.datastructur.es/materials/proj/proj3/img/enemy.gif" alt="Movie recommedner system"  -->
+                                    <!-- /> -->
                             </div>
 
                         </div>
                     </div>
 
+                    <div id = "box5" class="section-inner shadow-sm rounded">
+                        <aside class="info aside section">
+                    <div class="content">
+                        <h3 class="title mb-3" style="display:flex;justify-content: space-between;"><a
+                                href="https://github.com/Berkeley-CS61B-Student/sp23-proj3-g1298/tree/main/proj3"> Pacman-designed Game </a>
+                            <span><i id="1" class="arrow up"></i></span>
+                        </h3>
+
+                        <div class="desc text-start">
+                            <p>Led the development of a dynamic Pacman-inspired world exploration engine, combining pseudo-random world
+                                generation with projected path display.
+                                It has a feature to customize avatar appearance for immersive and visually distinct virtual environments.</p>
+                                <img src="https://sp23.datastructur.es/materials/proj/proj3/img/enemy.gif" alt="Pacman Game Screenshot" 
+                                class="project-image"/>
+                        </div>
+
+                    </div>
+                </div>
                     <div id = "box5" class="section-inner shadow-sm rounded">
                         <aside class="info aside section">
                             <div class="content">
@@ -977,7 +1000,7 @@
                                             <!-- <i class="fas fa-info-circle"></i> Font Awesome fontawesome.com -->Learning</span>
                                     </h3>
                                     <div class="level-bar progress">
-                                        <div class="progress-bar level-bar-inner" role="progressbar" style="width: 50%"
+                                        <div class="progress-bar level-bar-inner" role="progressbar" style="width:90%"
                                             aria-valuenow="94" aria-valuemin="0" aria-valuemax="94"></div>
                                     </div>
                                     <!--//level-bar-->
