--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
                         <div class="content">
                             <h3 class="title mb-3" style="display:flex;justify-content: space-between;">
                                 <a
-                                href="https://github.com/rayyanahmed021/movie_recommend">   SceneScout </a>
+                                href="https://github.com/Riyya2009/SceneScout>   SceneScout </a>
                                 <span><i id="1" class="arrow up"></i></span>
                             </h3>
 
